--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -28,11 +28,13 @@
       </div>
       <ul class="menu">
         <li class="bouton"><a href="{% url 'index' %}">Accueil</a></li>
-        <li class="bouton"><a href="#tarifs">Tarifs</a></li>
+        <li class="bouton"><a href="{% url 'index' %}#tarifs">Tarifs</a></li>
         <li class="bouton"><a href="{% url 'contact' %}">Contact</a></li>
+
         {% if user.is_authenticated %}
-          <li class="bouton"><a href="{% url 'select_template' %}">Templates</a></li>
-          <li class="bouton"><form class="" action="{% url 'logout' %}" method="POST">
+        <li class="bouton"><a href="{% url 'profile' %}">Profile</a></li>
+        <li class="bouton"><a href="{% url 'select_template' %}">Templates</a></li>
+        <li class="bouton"><form class="" action="{% url 'logout' %}" method="POST">
     {% csrf_token %}
 
     <button type="submit" name="button" class="logout">Se déconnecter</button>
