--- a/src/templates/base_dashboard.html
+++ b/src/templates/base_dashboard.html
@@ -28,7 +28,7 @@
       <ul class="menu">
         {% if not user.is_authenticated %}
         <li class="bouton"><a href="{% url 'index' %}">Accueil</a></li>
-        <li class="bouton"><a href="#tarifs">Tarifs</a></li>
+        <li class="bouton"><a href="{% url 'index' %}#tarifs">Tarifs</a></li>
         <li class="bouton"><a href="{% url 'contact' %}">Contact</a></li>
         {% endif %}
         {% if user.is_authenticated %}
