--- a/src/templates/registration/create_profile.html
+++ b/src/templates/registration/create_profile.html
@@ -2,13 +2,22 @@
 {% load static %}
 
 {% block content %}
-    <form method="post" enctype="multipart/form-data" id="form_create">
+<head>
+    <link rel="stylesheet" href="{% static 'styles/styles_profile.css' %}" />
+</head>
+    <h1>Modification du profil de <span style="color: #fff;">{{ user.username }}</span></h1>
+    <form method="post" enctype="multipart/form-data" id="form_create" autocomplete="off">
         {% csrf_token %}
         {{ form.as_p }}
-        {{ password_form.as_p }}
-        <button type="submit">Enregistrer les modifications</button>
+        <button type="submit" name="profile_form">Enregistrer les modifications du profil</button>
     </form>
 
-    <a href="{% url 'profile' %}">Retour au profil</a>
-{% endblock %}
+    <form method="post" id="password_form">
+        {% csrf_token %}
+        {{ password_form.as_p }}
+        <button type="submit" name="password_form">Changer le mot de passe</button>
+    </form>
 
+    <a class="profile" href="{% url 'profile' %}">Retour au profil</a>
+
+{% endblock %}
