--- a/src/templates/registration/profile.html
+++ b/src/templates/registration/profile.html
@@ -1,18 +1,111 @@
 {% extends "base_dashboard.html" %}
-{% load static %}
-{% block content %}
-    <h1>Profil de {{ user.username }}</h1>
-    {% if user.userprofile.profile_picture %}
-    <img src="{{ user.userprofile.profile_picture.url }}" alt="Photo de profil" width="100" height="100">
-    {% else %}
-    <p>Aucune photo disponible</p>
-    {% endif %}
-    <p>Nom d'utilisateur : {{ user.username }}</p>
-    <p>Email : {{ user.email }}</p>
-    <p>Bio : {{ user.userprofile.bio }}</p>
-    <p>Date de naissance : {{ user.userprofile.date_of_birth }}</p>
-    <p>Numéro de téléphone : {{ user.userprofile.phone_number }}</p>
-    <p>Adresse : {{ user.userprofile.address }}</p>
-    <a href="{% url 'create_profile' %}">Retour au profil</a>
 
+{% load static %}
+
+{% block title %}Profil{% endblock %}
+
+{% block content %}
+<style>
+    .gradient-custom {
+    /* fallback for old browsers */
+    background: #f6d365;
+
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(
+    to right bottom,
+    rgba(246, 211, 101, 1),
+    rgba(253, 160, 133, 1)
+    );
+
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(
+    to right bottom,
+    rgba(246, 211, 101, 1),
+    rgba(253, 160, 133, 1)
+    );
+    }
+    h1.profile {
+    margin-top: 60px;
+    margin-bottom: 0;
+    }
+</style>
+
+<head>
+    <link
+    href="//mdbcdn.b-cdn.net/wp-content/themes/mdbootstrap4/docs-app/css/dist/mdb5/standard/core.min.css"
+    rel="stylesheet"
+    />
+</head>
+    <h1 class="profile">
+    Profil de <span style="color: #fff">{{ user.username }}</span>
+    </h1>
+
+<section class="vh-100">
+<div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-baseline h-100">
+        <div class="col col-lg-6 mb-4 mb-lg-0">
+            <div class="card mb-3" style="border-radius: 0.5rem">
+                <div class="row g-0">
+                    <div
+                    class="col-md-4 gradient-custom text-center text-white"
+                    style="
+                    border-top-left-radius: 0.5rem;
+                    border-bottom-left-radius: 0.5rem;
+                    "
+                    >
+                    <img
+                    src="{{ user.userprofile.profile_picture.url }}"
+                    alt="Avatar"
+                    class="img-fluid my-5"
+                    style="width: 100px; border-radius: 50%"
+                    />
+                    <h5>{{ user.username }}</h5>
+                    <a href="{% url 'create_profile' %}"
+                    ><i class="far fa-edit mb-5"></i>Modifier le profil</a
+                    >
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body p-4">
+                        <h6>Informations</h6>
+                        <hr class="mt-0 mb-4" />
+                            <div class="row pt-1">
+
+                                <div class="col-6 mb-3">
+                                <h6>Nom</h6>
+                                <p class="text-muted">{{ user.userprofile.last_name }}</p>
+                                </div>
+
+                                <div class="col-6 mb-3">
+                                <h6>Prénom</h6>
+                                <p class="text-muted">{{ user.userprofile.first_name }}</p>
+                                </div>
+
+                                <div class="col-6 mb-3">
+                                <h6>Email</h6>
+                                <p class="text-muted">{{ user.userprofile.email }}</p>
+                                </div>
+
+                                <div class="col-6 mb-3">
+                                <h6>Numéro de téléphone</h6>
+                                <p class="text-muted">{{ user.userprofile.phone_number }}</p>
+                                </div>
+
+                                <div class="col-6 mb-3">
+                                <h6>Adresse</h6>
+                                <p class="text-muted">{{ user.userprofile.address }}</p>
+                                </div>
+
+                                <div class="col-6 mb-3">
+                                <h6>Code Postale</h6>
+                                <p class="text-muted">{{ user.userprofile.postal_code }}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</section>
 {% endblock %}
