Add: create the system of email , the lambda user can send a message to admin of website

--- a/src/static/styles/styles.css
+++ b/src/static/styles/styles.css
@@ -341,6 +341,7 @@ label {
 
 input[type="text_contact"],
 input[type="email_contact"],
+input[type="subject_contact"],
 textarea {
     width: 90%;
     padding: 10px;
