--- a/src/templates/registration/contact.html
+++ b/src/templates/registration/contact.html
@@ -12,6 +12,10 @@
                     <input type="text_contact" id="nom" name="nom" required>
                 </div>
                 <div class="form-group">
+                    <label for="subject">Sujet :</label>
+                    <input type="subject_contact" id="subject" name="subject" required>
+                </div>
+                <div class="form-group">
                     <label for="email">Email :</label>
                     <input type="email_contact" id="email" name="email" required>
                 </div>
